THRIFT-3929 php namespace remove tail "\\"

This closes #1089